# device_board_fnlink

./: BUILD.gn
drivers/: BUILD.gn
drivers/liteos_m/display/: BUILD.gn
drivers/liteos_m/touch/: BUILD.gn
hcs/: BUILD.gn
hdf_drivers/: BUILD.gn
hdf_drivers/core/: BUILD.gn
hdf_drivers/gpio/: BUILD.gn
hdf_drivers/i2c/: BUILD.gn
hdf_drivers/pwm/: BUILD.gn
hdf_drivers/spi/: BUILD.gn
hdf_drivers/uart/: BUILD.gn
hdf_drivers/watchdog/: BUILD.gn
shields/v200zr-evb-t0/: BUILD.gn  v200zr-evb-t0.hcs
shields/v200zr-evb-t1/: BUILD.gn  Kconfig.liteos_m.shield  v200zr-evb-t1.hcs
v200zr/: ohos.build
v200zr/liteos_m/: config.gni
v200zr/liteos_m/at/: BUILD.gn
