# Copyright (c) 2021 FnLink (hunan) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

module_switch = defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI)
module_name = get_path_info(rebase_path("."), "name")

hdf_driver(module_name) {
  if (defined(LOSCFG_SOC_COMPANY_BESTECHNIC)) {
    sources = [ "//drivers/hdf_core/adapter/platform/spi/spi_bes.c" ]
  }

  include_dirs = [
    "//drivers/hdf_core/framework/support/platform/include/spi",
    "//drivers/hdf_core/adapter/platform/spi",
  ]

  if (defined(LOSCFG_SHIELD_V200ZR_EVB_T1) &&
      defined(LOSCFG_DRIVERS_HDF_CONFIG_MACRO)) {
    deps = [ "//device/board/fnlink/shields" ]
  }
}
